--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
 	"license": "MIT",
 	"require": {
 		"php": ">=5.3.0",
-		"illuminate/support": "4.0.x"
+		"illuminate/support": ">=4.0.0"
 	},
 	"autoload": {
 		"classmap": [
