--- a/composer.json
+++ b/composer.json
@@ -8,8 +8,8 @@
 	],
 	"license": "MIT",
 	"require": {
-		"php": ">=5.3.0",
-		"illuminate/support": ">=5.0.*"
+		"php": ">=5.4.0",
+		"illuminate/support": ">=5.0.1"
 	},
 	"autoload": {
 		"classmap": [
