--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-	"name": "teepluss/laravel-console",
+	"name": "darsain/laravel-console",
 	"description": "Browser console for Laravel Framework.",
 	"keywords": [
 		"laravel",
